[gd_scene load_steps=3 format=3 uid="uid://bv5d848k804vu"]

[ext_resource type="Script" path="res://Scripts/Game/mine_tile.gd" id="1_oqevy"]

[sub_resource type="LabelSettings" id="LabelSettings_rc5l2"]
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.392157)
shadow_offset = Vector2(2, 2)

[node name="ColorRect" type="ColorRect"]
custom_minimum_size = Vector2(50, 50)
focus_mode = 2
color = Color(0.6, 0.6, 0.6, 1)
script = ExtResource("1_oqevy")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 49.0
offset_bottom = 49.0
label_settings = SubResource("LabelSettings_rc5l2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReferenceRect" type="ReferenceRect" parent="."]
visible = false
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
mouse_filter = 2
border_color = Color(0.821789, 0.821789, 0.821789, 1)
border_width = 5.0
editor_only = false

[connection signal="gui_input" from="." to="." method="_on_tile_pressed"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
